added Titillium font to project

--- a/assets/sass/modules/variables.scss
+++ b/assets/sass/modules/variables.scss
@@ -34,17 +34,11 @@ $magenta: #930f5b;
 $base-line-height: 1.7;
 
 //Google font
-@import url(http://fonts.googleapis.com/css?family=Roboto+Slab|Open+Sans:400italic,700italic,400,700);
+@import url(https://fonts.googleapis.com/css?family=Titillium+Web:200,300,400,600,700&display=swap);
 
-//Typekit font
-@import url(https://use.typekit.net/tum0hnl.css);
 
 //Fonts
-$font-stack: Helvetica, sans-serif;
-$roboto-slab: 'Roboto Slab', serif;   
-$open-sans: 'Open Sans', sans-serif;
-$proxima-nova: 'proxima-nova', sans-serif;
-$proxima-nova-extra-condensed: ' proxima-nova-extra-condensed', sans-serif;
+$fonts: 'Titillium Web', sans-serif;
 
 // Weights
 $hairline-weight: 100;
