added colour variables

--- a/assets/sass/modules/variables.scss
+++ b/assets/sass/modules/variables.scss
@@ -11,6 +11,9 @@ $color-primary: DarkSlateBlue;
 
 //Black
 $black: #000;
+$deep-black: #1e2021;
+$dark-black: #2a2d2e;
+$darker-black: #111;
 $medium-black: #1d1d1d;
 $soft-black: #555;
 $softest-black: #444;
@@ -28,7 +31,9 @@ $med-gray: #e5e5e5;
 $mid-gray: #666;
 $lighest-gray: #f1f1f1;
 $light-gray: #f4f4f4;
+$very-lighter-gray: #f2f2f2;
 $very-light-gray: #eee;
+$super-light-gray: #e2e2e2;
 $light-gray: #ddd;
 $lighty-gray: #ccc;
 $normgray: #777;
@@ -40,8 +45,25 @@ $white: #fff;
 //Yellow
 $soft-yellow: #fff486;
 
+
+
 //Pink
 $pink: #e93ead;
+
+//Brand Colours
+
+//Twiiter
+$tw-blue: #00acee;
+
+//Facebook
+$fb-blue: #3b5999;
+
+//Pinterest
+$pin-red: #ca2128;
+
+//Linkedin
+$link-blue: #0077b5
+
 // Base
 
 $base-line-height: 1.7;
