added light gray two colour variable

--- a/assets/sass/modules/variables.scss
+++ b/assets/sass/modules/variables.scss
@@ -31,6 +31,7 @@ $med-gray: #e5e5e5;
 $mid-gray: #666;
 $lighest-gray: #f1f1f1;
 $light-gray: #f4f4f4;
+$light-gray-two: #f4f4f4;
 $very-lighter-gray: #f2f2f2;
 $very-light-gray: #eee;
 $super-light-gray: #e2e2e2;
@@ -63,7 +64,7 @@ $fb-blue: #3b5999;
 $pin-red: #ca2128;
 
 //Linkedin
-$link-blue: #0077b5
+$link-blue: #0077b5;
 
 // Base
 
