updated light-gray-two colour

--- a/assets/sass/modules/variables.scss
+++ b/assets/sass/modules/variables.scss
@@ -31,7 +31,7 @@ $med-gray: #e5e5e5;
 $mid-gray: #666;
 $lighest-gray: #f1f1f1;
 $light-gray: #f4f4f4;
-$light-gray-two: #f4f4f4;
+$light-gray-two: #383c3d;
 $very-lighter-gray: #f2f2f2;
 $very-light-gray: #eee;
 $super-light-gray: #e2e2e2;
