change font awesome to sass variable

--- a/assets/sass/modules/variables.scss
+++ b/assets/sass/modules/variables.scss
@@ -78,6 +78,7 @@ $base-line-height: 1.7;
 $fonts: 'Titillium Web', sans-serif;
 $fa-brands: "Font Awesome 5 Brands";
 $fa-free: "Font Awesome 5 Free";
+$fa-pro: "Font Awesome 5 Pro";
 
 // Weights
 $hairline-weight: 100;
