removed padding top to 0

--- a/assets/sass/sections/footer.scss
+++ b/assets/sass/sections/footer.scss
@@ -16,7 +16,7 @@
  #footer {
      color: $harder-gray;
      position: relative;
-     padding-top: 80px;
+     padding-top: 0;
 }
  #footer .pad {
      padding-bottom: 20px;
