added transition example

--- a/assets/sass/modules/mixins.scss
+++ b/assets/sass/modules/mixins.scss
@@ -55,6 +55,8 @@
 
 
 //transition
+//example
+/// @include transition(color .3s ease);
 @mixin transition($args...) {
   -webkit-transition: $args;
   -moz-transition: $args;
