--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -44,6 +44,7 @@
 @import "sections/footer";
 @import "sections/accessibility";
 @import "components/components";
+@import "sections/responsive";
 /*
 
  ==== Pages ====
